--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 </head>
 <body>
  
+    <div class="ide">
+        <div class="header">Online Ide</div>
+        <div class="textarea">
+            <textarea id="text-area" rows="30" cols="150">print(123)</textarea>
+        </div>
+    </div>
     
 <script src="ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 <script src="script.js"></script>
