adding client side call

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <div class="ide">
         <div class="header">Online Ide</div>
         <div class="textarea">
-            <textarea id="text-area" rows="30" cols="150">print(123)</textarea>
+            <textarea id="code" rows="30" cols="150">print(123)</textarea>
         </div>
-        <div class="submit"><button</div>
+        <div id="submit"><input type="button"></div>
+        <div class="output"></div>
     </div>
     
 <script src="ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
